--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@angular/router": "^15.2.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@ng-bootstrap/ng-bootstrap": "^14.2.0",
+    "@okta/okta-angular": "^5.2.0",
+    "@okta/okta-auth-js": "^6.4.0",
+    "@okta/okta-signin-widget": "^6.2.0",
     "bootstrap": "^5.3.1",
     "rxjs": "~7.8.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
